@@ -7,7 +7,6 @@
     <setting id="alt_filehoster" type="enum" label="30304" lvalues="30305|30301|30302|30303" default="0" />
     <setting type="sep" />
     <setting id="perpage" type="enum" label="30306" values="10|20|30|40|50" default="2" />
-    <setting type="sep" />
   </category>
 
   <!-- Folders -->
@@ -20,6 +19,8 @@
     <setting id="ebooks" type="bool" label="30314" default="false" />
     <setting id="apps" type="bool" label="30315" default="false" />
     <setting id="misc" type="bool" label="30316" default="false" />
+    <setting type="sep" />
+    <setting id="subcat" type="bool" label="30318" default="false" />
   </category>
 
   <!-- Advanced -->
